--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,6 +1,4 @@
-
-       
-        # Nome do Workflow
+# Nome do Workflow
 name: DevOpsLab Pipeline
 
 # Evento que irá acionar a pipeline
@@ -13,7 +11,6 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
@@ -23,11 +20,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Requirements
-        run:  pip install flask
+        run:  pip install flask flask-wtf pytest pytest-cov
 
       - name: Unit Test
-        run: python -m unittest -v test
-
+        run: |
+          coverage run --source=app -m pytest test.py
+          coverage report -m
+          coverage xml -i
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
@@ -69,5 +68,3 @@ jobs:
       # Enviando o código da App para o Heroku fazer Deploy
       - name: Push to Heroku & Deploy
         run: git push heroku HEAD:main --force
-        
-  
