--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,3 +14,6 @@ sonar.sources=app.py
 sonar.language=py
 sonar.python.version=3.8
 
+# Determinar Quality Gate como Bloqueante
+sonar.qualitygate.wait=true
+
